<resources>
    <string name="app_name">AndroidTestApp</string>
    <string name="homework_1">HomeWork #1</string>
    <string name="homework_2">HomeWork #2</string>
    <string name="homework_3">HomeWork #3</string>
    <string name="first_app">My First Application</string>
    <string name="homework_2_flags">Homework #2: Flags</string>
    <string name="show_flags">Show flags</string>
    <string name="show_animation">Show animation</string>
    <string name="animated_cat">Animated cat</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="dead">Dead</string>
    <string name="_1_confirmed">+1 Confirmed</string>
    <string name="_1_recovered">+1 Recovered</string>
    <string name="_1_dead">+1 Dead</string>
    <string name="_0">0</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="coronavirus_background">CoronaVirus Background</string>
    <string name="homework_4">Homework #4</string>
    <string name="add_1">Add 1</string>
    <string name="add_2">Add 2</string>
    <string name="remove_1">Remove 1</string>
    <string name="remove_2">remove 2</string>
    <string name="add_flower">Add flower</string>
    <string name="flower_name">Flower name</string>
    <string name="flower_image_url">Flower image URL</string>
    <string name="flower_price">Flower price</string>
    <string name="fill_all_fields">Please, fill all the required fields!</string>
    <string name="add_flower_first">Add flower first!</string>
    <string name="nothing_to_remove">Nothing to remove!</string>
    <string name="flower_added_success">Flower successfully added!</string>
    <string name="tap_me">Tap me!</string>
    <string name="first_is_set">First fragment is already set!</string>
    <string name="second_is_set">Second fragment is already set!</string>
    <string name="beer_snacks">BEER SNACKS</string>
    <string name="homework_5">homework #5</string>
    <string name="snack_image">Snack image</string>
    <string name="snack_name">Snack Name</string>
    <string name="snack_description">Snack description</string>
    <string name="portrait">portrait</string>
    <string name="landscape">landscape</string>
    <string name="input_planet_name">Input planet name</string>
    <string name="show_planet">show planet</string>
    <string name="name">Name:</string>
    <string name="planet">Planet</string>
    <string name="radius_m">Radius, m:</string>
    <string name="radius">radius</string>
    <string name="mass_1_mass_of_earth">Mass (1 = mass of Earth):</string>
    <string name="mass">mass</string>
    <string name="homework_6">Homework #6</string>
    <string name="cryptocurrencies">Cryptocurrencies</string>
    <string name="homework_7">Homework #7</string>
    <string name="usd_sign">$</string>
    <string name="_1_hour">1 hour:</string>
    <string name="percent">%</string>
    <string name="homework_8">Homework #8</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_ringing">Alarm ringing!</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="homework_9">Homework #9</string>
</resources>
