<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="8dp"
    android:padding="8dp">

    <ImageView
        android:id="@+id/cryptoImage"
        android:contentDescription="@string/cryptocurrencies"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cryptoName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/cryptoImage"
        app:layout_constraintTop_toTopOf="@+id/cryptoImage" />

    <TextView
        android:id="@+id/cryptoPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd_sign"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cryptoChange"
        app:layout_constraintStart_toEndOf="@+id/cryptoImage"
        app:layout_constraintTop_toBottomOf="@+id/cryptoName" />

    <TextView
        android:id="@+id/cryptoChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_hour"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/cryptoImage"
        app:layout_constraintStart_toEndOf="@+id/cryptoImage" />

</androidx.constraintlayout.widget.ConstraintLayout>